updated readme doc

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,1 @@
-I guess this is something about me then? Not something about Mary. Me. Why would it be about Mary anyway when it should be about me? See, all about me and nothing about Mary.
+A basic ecommerce app built with the guide of CareerFoundry
